@@ -27,7 +27,7 @@
 #include <cstring>
 #include <cstdlib>
 
-#define DEFAULT_TLIM 0.
+#define DEFAULT_TMIN -DBL_MAX
 
 using namespace Gyoto;
 using namespace std;
@@ -38,12 +38,12 @@ using namespace std;
 */
 Scenery::Scenery() :
   gg_(NULL), screen_(NULL), obj_(NULL), delta_(0.01),
-  quantities_(0), ph_(), tlim_(DEFAULT_TLIM) {}
+  quantities_(0), ph_(), tmin_(DEFAULT_TMIN) {}
 
 Scenery::Scenery(const Scenery& o) :
   SmartPointee(o),
   gg_(NULL), screen_(NULL), obj_(NULL), delta_(o.delta_),
-  quantities_(o.quantities_), ph_(o.ph_), tlim_(o.tlim_)
+  quantities_(o.quantities_), ph_(o.ph_), tmin_(o.tmin_)
 {
   // We have up to 3 _distinct_ clones of the same Metric.
   // Keep only one.
@@ -124,7 +124,7 @@ void Scenery::rayTrace(size_t imin, size_t imax,
   SmartPointer<Spectrometer> spr = screen_->getSpectrometer();
   ph_.setSpectrometer(spr);
   size_t nbnuobs = spr() ? spr -> getNSamples() : 0;
-  ph_.setTlim(tlim_);
+  ph_.setTmin(tmin_);
 
   double coord[8];
 
@@ -178,7 +178,7 @@ void Scenery::operator() (size_t i, size_t j,
   ph_.setSpectrometer(spr);
   size_t nbnuobs = spr() ? spr -> getNSamples() : 0;
   ph_.setDelta(delta_);
-  ph_.setTlim(tlim_);
+  ph_.setTmin(tmin_);
 
   if (data) data -> init(nbnuobs);
 
@@ -280,8 +280,8 @@ size_t Scenery::getScalarQuantitiesCount() const {
   return nquant;
 }
 
-double Scenery::getTlim() const { return tlim_; }
-void Scenery::setTlim(double tlim) { tlim_ = tlim; }
+double Scenery::getTmin() const { return tmin_; }
+void Scenery::setTmin(double tmin) { tmin_ = tmin; }
 
 #ifdef GYOTO_USE_XERCES
 void Scenery::fillElement(FactoryMessenger *fmp) {
@@ -300,7 +300,7 @@ void Scenery::fillElement(FactoryMessenger *fmp) {
 		<<getRequestedQuantitiesString()<<"\") ;" << endl;
     fmp -> setParameter("Quantities", getRequestedQuantitiesString());
   }
-  if (tlim_ != DEFAULT_TLIM) fmp -> setParameter("MinimumTime", tlim_);
+  if (tmin_ != DEFAULT_TMIN) fmp -> setParameter("MinimumTime", tmin_);
 }
 
 SmartPointer<Scenery> Gyoto::ScenerySubcontractor(FactoryMessenger* fmp) {
@@ -311,7 +311,7 @@ SmartPointer<Scenery> Gyoto::ScenerySubcontractor(FactoryMessenger* fmp) {
   SmartPointer<Screen> scr = NULL;
   SmartPointer<Astrobj::Generic> ao = NULL;
   string squant = "";
-  double tlim = DEFAULT_TLIM;
+  double tmin = DEFAULT_TMIN;
 
   gg = fmp->getMetric();
   scr= fmp->getScreen();
@@ -322,12 +322,12 @@ SmartPointer<Scenery> Gyoto::ScenerySubcontractor(FactoryMessenger* fmp) {
     char* tc = const_cast<char*>(content.c_str());
     if (name=="Delta") delta = atof(tc);
     if (name=="Quantities") squant = content;
-    if (name=="TLim") tlim = atof(tc);
+    if (name=="MinimumTime") tmin = atof(tc);
   }
 
   SmartPointer<Scenery> sc = new Scenery(gg, scr, ao);
   sc -> setDelta(delta);
-  sc -> setTlim(tlim);
+  sc -> setTmin(tmin);
   if (squant!="") sc -> setRequestedQuantities(squant);
   return sc;
 }
