@@ -1,4 +1,6 @@
 0.x.y soon ABI
+	* in Worldline, Photon and Scenery: rename tlim to tmin, default
+	  value is -DBL_MAX.
 	* add a mutli-wavelength flavour of Astrobj::emission()
 	* install yorick plug-in under ${prefix}, not necessarily in Y_HOME
 	* add plugin attribute to the Metric, Astrobj and Spectrum entities
